--- a/mozilla/xpfe/appshell/public/Makefile.in
+++ b/mozilla/xpfe/appshell/public/Makefile.in
@@ -45,6 +45,7 @@ XPIDLSRCS	= \
 		nsIUserInfo.idl \
 		nsITimingService.idl \
 		nsINativeAppSupport.idl \
+		nsIPopupWindowManager.idl \
 		$(NULL)
 
 ifneq (,$(filter mac cocoa,$(MOZ_WIDGET_TOOLKIT)))
