Rename 'rendercontext' to 'canvas', part 1/2

--- a/mozilla/layout/svg/renderer/public/Makefile.in
+++ b/mozilla/layout/svg/renderer/public/Makefile.in
@@ -51,12 +51,12 @@ XPIDLSRCS =                                   \
 	nsISVGPosGlyphGeometrySrc.idl             \
 	nsISVGRectangleSink.idl                   \
 	nsISVGRenderer.idl                        \
+	nsISVGRendererCanvas.idl                  \
 	nsISVGRendererGlyphGeometry.idl           \
 	nsISVGRendererGlyphMetrics.idl            \
 	nsISVGRendererPathBuilder.idl             \
 	nsISVGRendererPathGeometry.idl            \
 	nsISVGRendererRegion.idl                  \
-	nsISVGRendererRenderContext.idl           \
 	$(NULL)
 
 include $(topsrcdir)/config/rules.mk
