Bug 168316 - When Java calls into JS, add an extra frame to the top of the JS stack with principal informtaion for the security manager. r=dveditz, sr=jst, a=chofmann, buckland

--- a/mozilla/js/src/liveconnect/makefile.win
+++ b/mozilla/js/src/liveconnect/makefile.win
@@ -50,6 +50,8 @@ REQUIRES	= xpcom \
 		  string\
                   js \
 		  xpconnect \
+		  caps \
+		  necko \
 		  $(NULL)
 include <$(DEPTH)/config/config.mak>
 
