--- a/mozilla/extensions/Makefile.in
+++ b/mozilla/extensions/Makefile.in
@@ -28,6 +28,10 @@ include $(DEPTH)/config/autoconf.mk
 
 ifndef MOZ_XRE_APP
 DIRS		= $(MOZ_EXTENSIONS)
+else
+ifdef MOZ_MINOTAUR
+DIRS		= help
+endif
 endif
 
 include $(topsrcdir)/config/rules.mk
