--- a/mozilla/netwerk/protocol/Makefile.in
+++ b/mozilla/netwerk/protocol/Makefile.in
@@ -26,7 +26,7 @@ VPATH		= @srcdir@
 
 include $(DEPTH)/config/autoconf.mk
 
-DIRS		= about data file ftp http jar res viewsource
+DIRS		= about data file http jar res viewsource
 
 ifndef MOZ_MINOTAUR
 DIRS += ftp keyword datetime finger gopher 
