--- a/mozilla/embedding/tests/mfcembed/Makefile.in
+++ b/mozilla/embedding/tests/mfcembed/Makefile.in
@@ -87,7 +87,7 @@ CPPSRCS		= \
 
 EXTRA_DSO_LIBS	= embed_base_s gkgfx mfcEmbedComponents
 
-LIBS		= \
+PROG_LIBS	= \
 		$(EXTRA_DSO_LIBS) \
 		$(XPCOM_LIBS) \
 		$(NSPR_LIBS) \
