--- a/mozilla/embedding/tests/winEmbed/Makefile.in
+++ b/mozilla/embedding/tests/winEmbed/Makefile.in
@@ -64,7 +64,7 @@ CPPSRCS		= \
 
 EXTRA_DSO_LIBS	= embed_base_s gkgfx
 
-LIBS		= \
+PROG_LIBS	= \
 		$(EXTRA_DSO_LIBS) \
 		$(XPCOM_LIBS) \
 		$(NSPR_LIBS) \
