--- a/mozilla/xpfe/components/timebomb/tools/Makefile.in
+++ b/mozilla/xpfe/components/timebomb/tools/Makefile.in
@@ -12,7 +12,7 @@ CPPSRCS         = \
                 timebombgen.cpp \
                 $(NULL)
 
-LIBS            = \
+PROG_LIBS            = \
                 $(XPCOM_LIBS) \
                 $(NSPR_LIBS) \
                 $(NULL)
