--- a/mozilla/xpinstall/wizard/os2/setup/Makefile.in
+++ b/mozilla/xpinstall/wizard/os2/setup/Makefile.in
@@ -58,7 +58,7 @@ CPPSRCS		= \
 		xpnetHook.cpp \
 		$(NULL)
 
-LIBS		= $(EXTRA_DSO_LIBS)
+PROG_LIBS	= $(EXTRA_DSO_LIBS)
 
 LOCAL_INCLUDES	= -I$(srcdir)/../uninstall
 
