--- a/mozilla/embedding/browser/activex/src/plugin/Makefile.in
+++ b/mozilla/embedding/browser/activex/src/plugin/Makefile.in
@@ -196,7 +196,7 @@ EXTRA_DSO_LDOPTS = \
     $(NSPR_LIBS) \
     $(NULL)
 
-LIBS = \
+PROG_LIBS = \
     $(DIST)/lib/$(LIB_PREFIX)string_s.$(LIB_SUFFIX) \
     $(DIST)/lib/$(LIB_PREFIX)string_obsolete_s.$(LIB_SUFFIX) \
     $(DIST)/lib/$(LIB_PREFIX)xpcomglue.$(LIB_SUFFIX) \
