--- a/mozilla/embedding/qa/mozembed/src/Makefile.in
+++ b/mozilla/embedding/qa/mozembed/src/Makefile.in
@@ -57,7 +57,7 @@ CPPSRCS		= nsQABrowserView.cpp   \
 
 EXTRA_DSO_LIBS	= embed_base_s gkgfx
 
-LIBS		= \
+PROG_LIBS	= \
 		$(EXTRA_DSO_LIBS) \
 		$(XPCOM_LIBS) \
 		$(NSPR_LIBS) \
