--- a/mozilla/extensions/universalchardet/tests/Makefile.in
+++ b/mozilla/extensions/universalchardet/tests/Makefile.in
@@ -39,7 +39,7 @@ SIMPLE_PROGRAMS	= $(CPPSRCS:.cpp=$(BIN_SUFFIX))
 
 include $(topsrcdir)/config/config.mk
 
-LIBS		+= \
+PROG_LIBS	+= \
 		$(LIBS_DIR) \
 		$(XPCOM_LIBS) \
 		$(NSPR_LIBS) \
