--- a/mozilla/intl/chardet/tests/Makefile.in
+++ b/mozilla/intl/chardet/tests/Makefile.in
@@ -34,7 +34,7 @@ PROGRAM		= DetectCharset$(BIN_SUFFIX)
 
 CPPSRCS		= DetectCharset.cpp
 
-LIBS		= $(XPCOM_LIBS) $(NSPR_LIBS)
+PROG_LIBS	= $(XPCOM_LIBS) $(NSPR_LIBS)
 
 include $(topsrcdir)/config/rules.mk
 
