--- a/mozilla/intl/locale/tests/Makefile.in
+++ b/mozilla/intl/locale/tests/Makefile.in
@@ -35,7 +35,7 @@ SIMPLE_PROGRAMS	= $(CPPSRCS:.cpp=)
 
 LOCAL_INCLUDES	= -I$(srcdir)/../src
 
-LIBS		= $(XPCOM_LIBS) $(NSPR_LIBS)
+PROG_LIBS	= $(XPCOM_LIBS) $(NSPR_LIBS)
 
 include $(topsrcdir)/config/rules.mk
 
