--- a/mozilla/layout/html/tests/Makefile.in
+++ b/mozilla/layout/html/tests/Makefile.in
@@ -44,7 +44,7 @@ LOCAL_INCLUDES	= -I$(srcdir)/../style/src
 
 EXTRA_DSO_LIBS += gkgfx
 
-LIBS		= \
+PROG_LIBS	= \
 		$(LIBS_DIR) \
 		$(DIST)/lib/$(LIB_PREFIX)gkconhtmlcon_s.$(LIB_SUFFIX) \
 		$(DIST)/lib/$(LIB_PREFIX)gkconhtmldoc_s.$(LIB_SUFFIX) \
