--- a/mozilla/modules/libreg/Makefile.in
+++ b/mozilla/modules/libreg/Makefile.in
@@ -26,7 +26,7 @@ VPATH		= @srcdir@
 
 include $(DEPTH)/config/autoconf.mk
 
-DIRS		= include src standalone
+DIRS		= src standalone
 
 include $(topsrcdir)/config/rules.mk
 
