--- a/mozilla/other-licenses/libart_lgpl/Makefile.in
+++ b/mozilla/other-licenses/libart_lgpl/Makefile.in
@@ -113,9 +113,9 @@ include $(topsrcdir)/config/rules.mk
 DEFINES	+= -DLIBART_COMPILATION
 
 ifeq ($(OS_ARCH),WINNT)
-LIBS += $(IMPORT_LIBRARY)
+PROG_LIBS += $(IMPORT_LIBRARY)
 else
-LIBS += -L. -l$(LIBRARY_NAME)
+PROG_LIBS += -L. -l$(LIBRARY_NAME)
 endif
 
 $(SIMPLE_PROGRAMS): %$(BIN_SUFFIX): %.$(OBJ_SUFFIX) $(SHARED_LIBRARY)
