--- a/mozilla/tools/trace-malloc/Makefile.in
+++ b/mozilla/tools/trace-malloc/Makefile.in
@@ -51,7 +51,7 @@ endif
 
 include $(topsrcdir)/config/config.mk
 
-LIBS		+= \
+PROG_LIBS	+= \
 		$(LIBS_DIR) \
 		tmreader.$(OBJ_SUFFIX) \
 		$(XPCOM_LIBS) \
