--- a/mozilla/widget/src/os2/tests/Makefile.in
+++ b/mozilla/widget/src/os2/tests/Makefile.in
@@ -29,7 +29,7 @@ SIMPLE_PROGRAMS = dirpicker$(BIN_SUFFIX)
 
 CPPSRCS		= dirpicker.cpp
 
-LIBS		= $(DIST)/lib/wdgtos2.lib
+PROG_LIBS	= $(DIST)/lib/wdgtos2.lib
 
 include $(topsrcdir)/config/rules.mk
 
