--- a/mozilla/widget/src/xremoteclient/Makefile.in
+++ b/mozilla/widget/src/xremoteclient/Makefile.in
@@ -53,7 +53,7 @@ PROGOBJS        = mozilla-xremote-client.$(OBJ_SUFFIX) \
 		XRemoteClient.$(OBJ_SUFFIX) \
 		$(NULL)
 
-LIBS            = \
+PROG_LIBS	= \
 		$(XPCOM_LIBS) $(NSPR_LIBS) \
 		$(XLDFLAGS) $(XLIBS)
 
