--- a/mozilla/xpcom/sample/Makefile.in
+++ b/mozilla/xpcom/sample/Makefile.in
@@ -67,14 +67,14 @@ EXTRA_DSO_LDOPTS = \
 		$(NSPR_LIBS) \
 		$(NULL)
 
-LIBS            = \
+PROG_LIBS	= \
 		$(DIST)/lib/$(LIB_PREFIX)xpcomglue.$(LIB_SUFFIX) \
 		$(NSPR_LIBS) \
 		$(NULL)
 
 # Needed to resolve __yylex (?)
 ifeq ($(OS_ARCH)$(OS_RELEASE),FreeBSD2)
-LIBS		+= -lpcap
+PROG_LIBS	+= -lpcap
 endif
 
 include $(topsrcdir)/config/rules.mk
