--- a/mozilla/xpcom/tests/windows/Makefile.in
+++ b/mozilla/xpcom/tests/windows/Makefile.in
@@ -41,4 +41,4 @@ include $(topsrcdir)/config/rules.mk
 
 OS_LIBS = rpcrt4.lib uuid.lib
 
-LIBS = $(XPCOM_LIBS) $(NSPR_LIBS)
+PROG_LIBS = $(XPCOM_LIBS) $(NSPR_LIBS)
