--- a/mozilla/xpcom/tools/registry/Makefile.in
+++ b/mozilla/xpcom/tools/registry/Makefile.in
@@ -33,7 +33,7 @@ REQUIRES	= string \
 
 SIMPLE_PROGRAMS	= $(CPPSRCS:.cpp=$(BIN_SUFFIX))
 
-LIBS		= \
+PROG_LIBS	= \
 		$(XPCOM_LIBS) \
 		$(NSPR_LIBS) \
 		$(NULL)
