--- a/mozilla/xpinstall/wizard/libxpnet/test/Makefile.in
+++ b/mozilla/xpinstall/wizard/libxpnet/test/Makefile.in
@@ -32,7 +32,7 @@ CPPSRCS			= TestLibxpnet.cpp
 
 SIMPLE_PROGRAMS	= $(CPPSRCS:.cpp=$(BIN_SUFFIX))
 
-LIBS			= -lxpnet_s
+PROG_LIBS		= -lxpnet_s
 
 ifeq ($(OS_ARCH),WINNT)
 MAPFILE			= TestLibxpnet.map
