--- a/mozilla/security/jss/pkg/solaris/Makefile.targ
+++ b/mozilla/security/jss/pkg/solaris/Makefile.targ
@@ -9,7 +9,7 @@ pkginfo: pkginfo.tmpl ../awk_pkginfo-$(MACH)
 	$(RM) $@; nawk -f ../awk_pkginfo-$(MACH) $@.tmpl > $@
 
 pkg: $(PKGARCHIVE)
-	pkgmk -f prototype_sparc -d $(PKGARCHIVE) -r $(ROOT) -o $(PACKAGE)
+	pkgmk -f prototype_$(MACH) -d $(PKGARCHIVE) -r $(ROOT) -o $(PACKAGE)
 
 $(PKGARCHIVE):
 	[ -d $(PKGARCHIVE) ] || mkdir -p $(PKGARCHIVE)
