--- a/mozilla/dbm/Makefile.in
+++ b/mozilla/dbm/Makefile.in
@@ -26,11 +26,76 @@ VPATH		= @srcdir@
 
 include $(DEPTH)/config/autoconf.mk
 
-DIRS		= include src
+MODULE		= dbm
+LIBRARY_NAME	= mozdbm_s
+LIB_IS_C_ONLY	= 1
 
-ifdef ENABLE_TESTS
-DIRS		+= tests
+ifeq ($(OS_ARCH),WINNT)
+LIBRARY_NAME	= dbm$(MOZ_BITS)
 endif
+
+SIMPLE_PROGRAMS	= tests/lots$(BIN_SUFFIX)
+
+PWD		:= $(shell pwd)
+
+_CSRCS		= \
+		db.c \
+		h_bigkey.c \
+		h_func.c \
+		h_log2.c \
+		h_page.c \
+		hash.c \
+		hash_buf.c \
+		hsearch.c \
+		mktemp.c \
+		ndbm.c \
+		strerror.c \
+		nsres.c \
+		$(NULL)
+
+ifeq ($(OS_ARCH),WINNT)
+_CSRCS		+= memmove.c snprintf.c
+else
+ifeq (,$(filter -DHAVE_MEMMOVE=1,$(DEFS)))
+_CSRCS += memmove.c
+endif
+
+ifeq (,$(filter -DHAVE_SNPRINTF=1,$(DEFS)))
+_CSRCS += snprintf.c
+endif
+endif # WINNT
+
+LIB_CSRCS	= $(addprefix src/,$(_CSRCS))
+
+_EXPORTS	= \
+	nsres.h \
+	cdefs.h \
+	mcom_db.h \
+	ncompat.h \
+	winfile.h \
+	$(NULL)
+
+EXPORTS	= $(addprefix include/,$(_EXPORTS))
+
+LOCAL_INCLUDES	= -I$(srcdir)/include
+
+FORCE_STATIC_LIB = 1
+FORCE_USE_PIC = 1
+
+MAKE_DIRS	= $(PWD)/src $(PWD)/include $(PWD)/tests
 
 include $(topsrcdir)/config/rules.mk
 
+$(PWD)/src/ $(PWD)/include/ $(PWD)/tests/:
+	@$(MAKE_DIR)
+
+DEFINES		+= -DMEMMOVE -D__DBINTERFACE_PRIVATE $(SECURITY_FLAG)
+ifeq ($(OS_ARCH), Linux)
+DEFINES         += -D_BSD_SOURCE
+endif
+
+ifeq ($(OS_ARCH),AIX)
+OS_LIBS		+= -lc_r
+endif
+
+PROG_LIBS	= -L. $(call EXPAND_LIBNAME,$(LIBRARY_NAME))
