Add support for GetContents and InsertText commands, using nsICommandManger and parameter-based commmands. Chimera uses these commands for services support. Bug 152023.

--- a/mozilla/dom/src/base/Makefile.in
+++ b/mozilla/dom/src/base/Makefile.in
@@ -53,6 +53,7 @@ REQUIRES	= xpcom \
 		  shistory \
 		  plugin \
 		  windowwatcher \
+		  commandhandler  \
 		  htmlparser \
 		  chardet \
 		  find \
