Sonja insisted the name be $(OBJDIR) rather than solaris-$(OBJDIR).

--- a/mozilla/security/nss/Makefile
+++ b/mozilla/security/nss/Makefile
@@ -113,7 +113,7 @@ nss_RelEng_bld: build_coreconf import all
 ifeq ($(OS_ARCH),SunOS)
 solarispkg:
 	@echo Making Solaris packages.
-	rm -rf pkg/solaris-$(OBJDIR)
-	cp -r pkg/solaris pkg/solaris-$(OBJDIR)
-	$(MAKE) -C pkg/solaris-$(OBJDIR) publish
+	rm -rf pkg/$(OBJDIR)
+	cp -r pkg/solaris pkg/$(OBJDIR)
+	$(MAKE) -C pkg/$(OBJDIR) publish
 endif
