Initial checkin of new libart-based rendering backend. No text or foreignObject support yet.

--- a/mozilla/config/autoconf.mk.in
+++ b/mozilla/config/autoconf.mk.in
@@ -129,6 +129,7 @@ MOZ_UPDATE_XTERM = @MOZ_UPDATE_XTERM@
 MOZ_MATHML = @MOZ_MATHML@
 MOZ_SVG = @MOZ_SVG@
 MOZ_SVG_RENDERER_GDIPLUS = @MOZ_SVG_RENDERER_GDIPLUS@
+MOZ_SVG_RENDERER_LIBART = @MOZ_SVG_RENDERER_LIBART@
 MOZ_LIBART_CFLAGS = @MOZ_LIBART_CFLAGS@
 TX_EXE = @TX_EXE@
 
