Refactor code to allow for ForeignObject rendering under Libart backend.

--- a/mozilla/layout/svg/renderer/src/libart/Makefile.in
+++ b/mozilla/layout/svg/renderer/src/libart/Makefile.in
@@ -64,6 +64,7 @@ CPPSRCS = \
 	nsSVGRenderItem.cpp \
 	nsSVGFill.cpp \
 	nsSVGStroke.cpp \
+	nsSVGLibartBitmapDefault.cpp \
 	$(NULL)
 
 #LOCAL_INCLUDES	= \
