stub out glpyh classes, so that the libart backend doesn't crash for documents with <text>

--- a/mozilla/layout/svg/renderer/src/libart/Makefile.in
+++ b/mozilla/layout/svg/renderer/src/libart/Makefile.in
@@ -65,6 +65,8 @@ CPPSRCS = \
 	nsSVGFill.cpp \
 	nsSVGStroke.cpp \
 	nsSVGLibartBitmapDefault.cpp \
+	nsSVGLibartGlyphGeometry.cpp \
+	nsSVGLibartGlyphMetrics.cpp \
 	$(NULL)
 
 #LOCAL_INCLUDES	= \
