Add the Mac OS X default plugin to the build.

--- a/mozilla/modules/plugin/Makefile.in
+++ b/mozilla/modules/plugin/Makefile.in
@@ -47,6 +47,10 @@ endif
 ifeq ($(OS_ARCH),OS2)
 DIRS		+= samples/default/os2
 endif
+
+ifeq ($(OS_ARCH),Darwin)
+DIRS		+= samples/default/mac
+endif
  
 include $(topsrcdir)/config/rules.mk
 
