--- a/mozilla/security/jss/Makefile
+++ b/mozilla/security/jss/Makefile
@@ -91,5 +91,7 @@ import::
 ifeq ($(OS_ARCH),SunOS)
 solarispkg::
 	@echo Making Solaris packages.
-	$(MAKE) -C pkg/solaris publish
+	rm -rf pkg/$(OBJDIR)
+	cp -r pkg/solaris pkg/$(OBJDIR)
+	$(MAKE) -C  pkg/$(OBJDIR) publish
 endif
