--- a/mozilla/security/jss/pkg/solaris/Makefile
+++ b/mozilla/security/jss/pkg/solaris/Makefile
@@ -33,18 +33,15 @@ endif
 
 include Makefile.com
 
-awk_pkginfo-$(MACH): bld_awk_pkginfo
-	./bld_awk_pkginfo -m $(MACH) -p "$(PRODUCT_VERSION)" -o $@ -v $(PRODUCT_VERSION)
-
 awk_pkginfo: bld_awk_pkginfo
 	./bld_awk_pkginfo -m $(MACH) -p "$(PRODUCT_VERSION)" -o $@ -v $(PRODUCT_VERSION)
 
-all:: awk_pkginfo-$(MACH) $(PROTO)
-publish: awk_pkginfo-$(MACH) $(PROTO)
+all:: awk_pkginfo $(PROTO)
+publish: awk_pkginfo $(PROTO)
 	+$(LOOP_OVER_DIRS)
 
 clean clobber::
-	$(RM) awk_pkginfo-$(MACH) bld_awk_pkginfo
+	$(RM) awk_pkginfo bld_awk_pkginfo
 	$(RM) -r $(ROOT)
 
 $(ROOT) $(ROOT)/%:
@@ -59,10 +56,6 @@ else
 $(ROOT)/usr/lib/mps: $(ROOT)/usr/lib
 	echo "target=$(SOURCE_RELEASE_XP_DIR)/$(SOURCE_RELEASE_XP_CLASSES_DIR)/$(IMPORT_XPCLASS_JAR)"
 	$(LN) -sf ../../../$(DIST)/lib $@
-#	$(LN) -sf $(SOURCE_RELEASE_XP_DIR)/$(SOURCE_RELEASE_XP_CLASSES_DIR)/$(IMPORT_XPCLASS_JAR) $(ROOT)/usr/lib/mps/jss312.jar
 	cp $(SOURCE_RELEASE_XP_DIR)/$(SOURCE_RELEASE_XP_CLASSES_DIR)/$(IMPORT_XPCLASS_JAR) $(ROOT)/usr/lib/mps/jss312.jar
 
-#$(ROOT)/usr/lib/mps/jss312.jar: $(SOURCE_RELEASE_XP_DIR)/$(SOURCE_RELEASE_XP_CLASSES_DIR)/$(IMPORT_XPCLASS_JAR) 
-#$(ROOT)/usr/lib/mps/jss312.jar: $(ROOT)/usr/lib/mps
-#	$(LN) -sf $(SOURCE_RELEASE_XP_DIR)/$(SOURCE_RELEASE_XP_CLASSES_DIR)/$(IMPORT_XPCLASS_JAR) $@
 endif
