--- a/mozilla/security/jss/pkg/solaris/Makefile.targ
+++ b/mozilla/security/jss/pkg/solaris/Makefile.targ
@@ -5,10 +5,10 @@
 #ident	"$Id$"
 #
 
-pkginfo: pkginfo.tmpl ../awk_pkginfo-$(MACH)
-	$(RM) $@; nawk -f ../awk_pkginfo-$(MACH) $@.tmpl > $@
+pkginfo: pkginfo.tmpl ../awk_pkginfo
+	$(RM) $@; nawk -f ../awk_pkginfo $@.tmpl > $@
 
-pkg: $(PKGARCHIVE)
+pkg: $(PKGARCHIVE) pkgdepend
 	pkgmk -f prototype_$(MACH) -d $(PKGARCHIVE) -r $(ROOT) -o $(PACKAGE)
 
 $(PKGARCHIVE):
