Bug 162038 - frameset pages come up blank when loaded in a background tab.  Merge the patch from bug 48422 from the trunk to fix some bogus logic in nsHTMLFrameSetFrame::Reflow which was causing the frame sizes to not be recalculated on a resize reflow _from_ 0,0.

--- a/mozilla/content/html/content/public/Makefile.in
+++ b/mozilla/content/html/content/public/Makefile.in
@@ -45,6 +45,7 @@ EXPORTS		= \
 		nsITextControlElement.h \
 		nsIScriptElement.h \
 		nsIFormSubmission.h \
+		nsIFrameSetElement.h \
 		$(NULL)
 
 include $(topsrcdir)/config/rules.mk
