--- a/mozilla/content/svg/content/src/Makefile.in
+++ b/mozilla/content/svg/content/src/Makefile.in
@@ -93,6 +93,7 @@ EXPORTS =  			\
 	nsISVGValueObserver.h      \
 	nsISVGValueUtils.h         \
 	nsSVGTypeCIDs.h            \
+	nsISVGContent.h            \
 	$(NULL)
 
 
