--- a/mozilla/xpfe/bootstrap/macbuild/Contents/Info.plist
+++ b/mozilla/xpfe/bootstrap/macbuild/Contents/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>mozilla-bin</string>
 	<key>CFBundleGetInfoString</key>
-	<string>0.9.7+, © 1998-2002 The Mozilla Organization</string>
+	<string>1.2.1, © 1998-2002 The Mozilla Organization</string>
 	<key>CFBundleIconFile</key>
 	<string>mach</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -17,7 +17,7 @@
 	<key>CFBundleSignature</key>
 	<string>MOZZ</string>
 	<key>CFBundleVersion</key>
-	<string>0.9.7+</string>
+	<string>1.2.1</string>
 	<key>CSResourcesFileMapped</key>
 	<true/>
 	<key>NSHumanReadableCopyright</key>
