Updating to latest mozdev source.

--- a/mozilla/extensions/spellcheck/myspell/dictionaries/Makefile.in
+++ b/mozilla/extensions/spellcheck/myspell/dictionaries/Makefile.in
@@ -51,3 +51,6 @@ DICTIONARY_FILES=\
 
 libs::
 	$(INSTALL) $(DICTIONARY_FILES) $(DIST)/bin/components/myspell
+
+install::
+	$(SYSINSTALL) $(IFLAGS1) $(DICTIONARY_FILES) $(DESTDIR)$(mozappdir)/components/myspell
