Setting packaging defaults for Beonex Communicator

--- a/mozilla/xpinstall/packager/Makefile.in
+++ b/mozilla/xpinstall/packager/Makefile.in
@@ -36,11 +36,11 @@ ifndef MOZ_PKG_FORMAT
 ifeq ($(OS_ARCH),WINNT)
 MOZ_PKG_FORMAT  = ZIP
 else
-MOZ_PKG_FORMAT	= TGZ
+MOZ_PKG_FORMAT	= BZ2
 endif
 endif
 ifndef MOZ_PKG_APPNAME
-MOZ_PKG_APPNAME = mozilla
+MOZ_PKG_APPNAME = beonex-comm
 endif
 
 MAKE_PACKAGE	= echo "Sorry, don't know how to build a $(MOZ_PKG_FORMAT) file yet...."
@@ -169,8 +169,8 @@ dist: $(MOZILLA_BIN)
 ifndef MOZ_PKG_DEST
 	@echo "Please define MOZ_PKG_DEST first. It must be an absolute path to a dir outside the source tree. It should be empty (files might get deleted without warning)."
 	@echo "Other options (not required):"
-	@echo "MOZ_PKG_FORMAT: Either TGZ for .tar.gz or BZ2 for .tar.bz2. Default TGZ."
-	@echo "MOZ_PKG_APPNAME: Application name, used for tarball filename, top-level dir in tarball and application start script. Default mozilla."
+	@echo "MOZ_PKG_FORMAT: Either TGZ for .tar.gz or BZ2 for .tar.bz2. Default BZ2."
+	@echo "MOZ_PKG_APPNAME: Application name, used for tarball filename, top-level dir in tarball and application start script. Default beoneox-comm."
 else
 	@if [ ! -d $(MOZ_PKG_DEST) ]; then mkdir $(MOZ_PKG_DEST); fi
 	@cd $(MOZ_PKG_DEST); rm -rf bin $(MOZ_PKG_APPNAME) $(PACKAGE)
